welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:45: error: Unit does not take parameters
faireLigne();
          ^